# app/usercenter/cmd/api/internal/handler/user/detail_handler.go
@@ -1,0 +1,27 @@
+package user
+
+import (
+	"net/http"
+
+	"github.com/jialechen7/go-lottery/common/response"
+
+	"github.com/jialechen7/go-lottery/app/usercenter/cmd/api/internal/logic/user"
+	"github.com/jialechen7/go-lottery/app/usercenter/cmd/api/internal/svc"
+	"github.com/jialechen7/go-lottery/app/usercenter/cmd/api/internal/types"
+	"github.com/zeromicro/go-zero/rest/httpx"
+)
+
+// 获取用户信息
+func DetailHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.UserInfoReq
+		if err := httpx.Parse(r, &req); err != nil {
+			response.ParamErrorResult(r, w, err)
+			return
+		}
+
+		l := user.NewDetailLogic(r.Context(), svcCtx)
+		resp, err := l.Detail(&req)
+		response.HttpResult(r, w, resp, err)
+	}
+}
